[Wheel event region] Invalidation when changing listeners on elements https://bugs.webkit.org/show_bug.cgi?id=211895

Reviewed by Simon Fraser.

Source/WebCore:

Doesn't handle root (window/document) invalidation yet.

Test: fast/scrolling/mac/wheel-event-listener-region-element-invalidation.html

* dom/EventTarget.cpp:
(WebCore::EventTarget::addEventListener):
(WebCore::EventTarget::removeEventListener):
(WebCore::EventTarget::removeAllEventListeners):

Invalidate element style on wheel event changes.

* rendering/RenderElement.cpp:
(WebCore::RenderElement::styleWillChange):
* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::invalidateEventRegion):

Build on non-iOS platforms.

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::maintainsEventRegion const):

Factor into function so it can be shared with RenderLayer::invalidateEventRegion.

(WebCore::RenderLayerBacking::updateEventRegion):
* rendering/RenderLayerBacking.h:

LayoutTests:

* fast/scrolling/mac/wheel-event-listener-region-element-invalidation-expected.txt: Added.
* fast/scrolling/mac/wheel-event-listener-region-element-invalidation.html: Added.


Canonical link: https://commits.webkit.org/224836@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261742 268f45cc-cd09-0410-ab3c-d52691b4dbfc