Source/WebCore/dom/EventTarget.cpp
@@ -95,6 +95,11 @@ bool EventTarget::addEventListener(const AtomString& eventType, Ref<EventListene
     if (listenerCreatedFromScript)
         InspectorInstrumentation::didAddEventListener(*this, eventType, listenerRef.get(), options.capture);
 
+    if (eventNames().isWheelEventType(eventType)) {
+        if (is<Element>(*this))
+            downcast<Element>(*this).invalidateStyleInternal();
+    }
+
     eventListenersDidChange();
     return true;
 }
@@ -136,6 +141,11 @@ bool EventTarget::removeEventListener(const AtomString& eventType, EventListener
     InspectorInstrumentation::willRemoveEventListener(*this, eventType, listener, options.capture);
 
     if (data->eventListenerMap.remove(eventType, listener, options.capture)) {
+        if (eventNames().isWheelEventType(eventType)) {
+            if (is<Element>(*this))
+                downcast<Element>(*this).invalidateStyleInternal();
+        }
+
         eventListenersDidChange();
         return true;
     }
@@ -367,6 +377,11 @@ void EventTarget::removeAllEventListeners()
 
     auto* data = eventTargetData();
     if (data && !data->eventListenerMap.isEmpty()) {
+        if (data->eventListenerMap.contains(eventNames().wheelEvent) || data->eventListenerMap.contains(eventNames().mousewheelEvent)) {
+            if (is<Element>(*this))
+                downcast<Element>(*this).invalidateStyleInternal();
+        }
+
         data->eventListenerMap.clear();
         eventListenersDidChange();
     }
