Source/WebCore/rendering/RenderElement.cpp
@@ -741,6 +741,8 @@ void RenderElement::styleWillChange(StyleDifference diff, const RenderStyle& new
                 return true;
             if (m_style.effectiveTouchActions() != newStyle.effectiveTouchActions())
                 return true;
+            if (m_style.eventListenerRegionTypes() != newStyle.eventListenerRegionTypes())
+                return true;
 #if ENABLE(EDITABLE_REGION)
             bool wasEditable = m_style.userModify() != UserModify::ReadOnly;
             bool isEditable = newStyle.userModify() != UserModify::ReadOnly;
